[gd_scene load_steps=3 format=3 uid="uid://35mmfwmhfhoy"]

[ext_resource type="Script" path="res://scripts/Effects/door_way.gd" id="1_6rhic"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_bnaxq"]

[node name="DoorWay" type="Area2D"]
collision_layer = 16
script = ExtResource("1_6rhic")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_bnaxq")

[node name="SpawnMarker" type="Marker2D" parent="."]

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
